<resources>
    <string name="app_name">Tip_Calculator</string>
    <string name="base">Bill</string>
    <string name="tip_15">Tip 15%</string>
    <string name="tip_value">Tip Value</string>
    <string name="total">Total</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="cad">CAD</string>
    <string name="reset">Reset</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="split_by_1">Split by 1</string>
    <string name="per_person">Per person</string>
</resources>
