<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/baseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/base"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_15"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/baseValue"
        app:layout_constraintTop_toBottomOf="@+id/baseValue" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_value"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/baseValue"
        app:layout_constraintTop_toBottomOf="@+id/tipPercent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/baseValue"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <EditText
        android:id="@+id/editTextBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="8"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@id/baseValue"
        app:layout_constraintStart_toEndOf="@+id/baseValue"
        app:layout_constraintTop_toTopOf="@id/baseValue"
        android:autofillHints="Enter bill amount"
        tools:ignore="LabelFor" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:max="25"
        app:layout_constraintBottom_toBottomOf="@id/buttonSub"
        app:layout_constraintEnd_toStartOf="@+id/buttonSub"
        app:layout_constraintStart_toEndOf="@+id/buttonSub"
        app:layout_constraintTop_toTopOf="@id/buttonSub" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tipLabel"
        app:layout_constraintStart_toEndOf="@+id/tipLabel"
        tools:text="3.78" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/total"
        app:layout_constraintStart_toEndOf="@+id/total"
        tools:text="12.44" />

    <TextView
        android:id="@+id/bottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:text="@string/tip_calculator"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cad"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tipAmount"
        app:layout_constraintBottom_toBottomOf="@id/tipAmount"
        app:layout_constraintStart_toEndOf="@id/tipAmount"
        app:layout_constraintTop_toTopOf="@id/tipAmount" />

    <TextView
        android:id="@+id/totalCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cad"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/totalAmount"
        app:layout_constraintBottom_toBottomOf="@id/totalAmount"
        app:layout_constraintStart_toEndOf="@id/totalAmount"
        app:layout_constraintTop_toTopOf="@id/totalAmount" />

    <TextView
        android:id="@+id/baseCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/cad"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@id/editTextBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextBase" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="236dp"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerPersonCad" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minus"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tipPercent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toEndOf="@+id/tipPercent"
        app:layout_constraintTop_toTopOf="@id/tipPercent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/plus"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="@id/seekBar" />

    <TextView
        android:id="@+id/textViewSplitBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/split_by_1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/baseValue"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/textViewPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/per_person"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/baseValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewSplitBy" />

    <TextView
        android:id="@+id/textViewAmountPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewPerPerson"
        app:layout_constraintStart_toEndOf="@+id/textViewPerPerson"
        tools:text="4.50" />

    <TextView
        android:id="@+id/textViewPerPersonCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cad"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/textViewAmountPerPerson"
        app:layout_constraintStart_toEndOf="@+id/textViewAmountPerPerson"
        app:layout_constraintTop_toTopOf="@id/textViewAmountPerPerson" />

    <SeekBar
        android:id="@+id/seekBarSplit"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:max="10"
        android:min="1"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@id/textViewSplitBy"
        app:layout_constraintStart_toEndOf="@id/textViewSplitBy"
        app:layout_constraintTop_toTopOf="@id/textViewSplitBy"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>